fixed images not showing issue

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -127,14 +127,14 @@ main {
         }
 
         .hero-img {
-            background: url(/assets/images/image-web-3-desktop.jpg);
+            background: url(../assets/images/image-web-3-desktop.jpg);
             background-size: cover;
             background-repeat: no-repeat;
             width: 100%;
             height: 50%;
 
             @media (max-width: 760px) {
-                background: url(/assets/images/image-web-3-mobile.jpg);
+                background: url(../assets/images/image-web-3-mobile.jpg);
                 background-size: 100%;
                 background-repeat: no-repeat;
                 height: 15em;
